--- a/App_LUMINOVA/templates/categoria_detail.html
+++ b/App_LUMINOVA/templates/categoria_detail.html
@@ -5,7 +5,7 @@
     <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-primary sidebar collapse border-end full-height" style="border-top-left-radius: 25px; border-top-right-radius: 25px;">
         <div class="position-sticky pt-4">
             <h6 class="sidebar-heading d-flex justify-content-center align-items-center px-3 mt-4 mb-1 text-white fw-bold">
-                <span>Depósito</span>
+                <a href="{% url 'App_LUMINOVA:deposito' %}"><span style="color: white;">Depósito</span></a>
             </h6>
             <hr class="text-white">
             <ul class="nav flex-column">
@@ -26,115 +26,146 @@
 {% endblock %}
 
 {% block content %}
-
-    <h1>Vista de productos de la Categoria</h1>
-
-
-    <!-- {% for categoria in categorias %}
+<div class="container-fluid">
+  <div class="row" style="align-items: flex-start;">
+    <div class="col-lg-8 col-md-7 col-12">
+      {% if categoria.nombre == categoria.nombre %}
         <table class="table bg-primary" style="border: black;">
-            <thead>
-                <th class="text-white text-center" style="background-color: #014BAC;" colspan="6">
-                    {{categoria.nombre}}
+          <thead>
+            <th class="text-white text-center" style="background-color: #014BAC;" colspan="7">
+              {{categoria.nombre}}
+            </th>
+          </thead>
+          <thead>
+            <tr>
+              <th scope="col" class="text-center" style="background-color: #808080;"></th>
+              <th scope="col" class="text-center" style="background-color: #808080;">Imagen</th>
+              <th scope="col" class="text-center" style="background-color: #808080;">ID</th>
+              <th scope="col" style="background-color: #808080;">Descripción</th>
+              <th scope="col" class="text-center" style="background-color: #808080;">Proveedor</th>
+              <th scope="col" class="text-center" style="background-color: #808080;">Cantidad</th>
+              <th scope="col" class="text-center" style="background-color: #808080;">Acciones</th>
+            </tr>
+          </thead>
+          {% for insumo in categoria.insumos.all %}
+            <tbody>
+              <tr>
+                <th scope="row" style="padding-top: 25px; padding-left: 20px;">
+                  <div style="width: 18px; height: 18px; background-color:red; border-radius: 4px; display: inline-block;"></div>
                 </th>
-            </thead>
-            <thead>
+                <td class="text-center"><img src="{{insumo.imagen.url}}" alt="Modulo LED" style="height: 50px;"></td>
+                <td class="text-center" style="padding-top: 20px;">{{insumo.id}}</td>
+                <td style="padding-top: 20px;">{{insumo.descripcion}}</td>
+                <td class="text-center" style="padding-top: 20px;">{{insumo.proveedor}}</td>
+                <td class="text-center" style="padding-top: 20px;">{{insumo.stock}}</td>
+                <td class="text-center" style="padding-top: 20px;">
+                  <a href=""><i class="bi bi-pencil-fill" style="padding-right: 15px;"></i></a>
+                  <a href=""><i class="bi bi-trash3-fill"></i></a>
+                </td>
+              </tr>
+            </tbody>
+          {% endfor %}
         </table>
-    {% endfor %} -->
-
-    <table class="table bg-primary" style="border: black;">
-    <thead>
-        <th class="text-white text-center" style="background-color: #014BAC;" colspan="7">
-            Modulos LED
-        </th>
-    </thead>
-    <thead>
-        <tr>
-            <th scope="col" class="text-center" style="background-color: #808080;"></th>
-            <th scope="col" class="text-center" style="background-color: #808080;">Imagen</th>
-            <th scope="col" class="text-center" style="background-color: #808080;">ID</th>
-            <th scope="col" style="background-color: #808080;">Nombre</th>
-            <th scope="col" class="text-center" style="background-color: #808080;">Proveedor</th>
-            <th scope="col" class="text-center" style="background-color: #808080;">Cantidad</th>
-            <th scope="col" class="text-center" style="background-color: #808080;">Acciones</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <th scope="row" style="padding-top: 25px; padding-left: 20px;">
-                <div style="width: 18px; height: 18px; background-color: red; border-radius: 4px; display: inline-block;"></div>
-            </th>
-            <td class="text-center"><img src="https://www.newark.com/productimages/promo/en_US/56AJ9853-40.jpg" alt="Modulo LED" style="height: 50px;"></td>
-            <td class="text-center" style="padding-top: 20px;">1</td>
-            <td style="padding-top: 20px;">Módulo LED, OSCONIQ S 5050 Series, Board + LED, Horti Blanco, 253 lm</td>
-            <td class="text-center" style="padding-top: 20px;">Newark</td>
-            <td class="text-center" style="padding-top: 20px;">600</td>
-            <td class="text-center" style="padding-top: 20px;">
-                <a href=""><i class="bi bi-pencil-fill" style="padding-right: 15px;"></i></a>
-                <a href=""><i class="bi bi-trash3-fill"></i></a>
-            </td>
-        </tr>
-        <tr>
-            <th scope="row" style="background-color: #C0B9B9; padding-top: 25px; padding-left: 20px;">
-                <div style="width: 18px; height: 18px; background-color: yellow; border-radius: 4px; display: inline-block;"></div>
-            </th>
-            <td class="text-center" style="background-color: #C0B9B9;"><img src="https://www.newark.com/productimages/promo/en_US/56AJ9853-40.jpg" alt="Modulo LED" style="height: 50px;"></td>
-            <td class="text-center" style="background-color: #C0B9B9; padding-top: 20px;">2</td>
-            <td style="background-color: #C0B9B9; padding-top: 20px;">Módulo LED DOB sin conductor para bombillas</td>
-            <td class="text-center" style="background-color: #C0B9B9; padding-top: 20px;">Alibaba</td>
-            <td class="text-center" style="background-color: #C0B9B9; padding-top: 20px;">500</td>
-            <td class="text-center" style="background-color: #C0B9B9; padding-top: 20px;">
-                <a href=""><i class="bi bi-pencil-fill" style="padding-right: 15px;"></i></a>
-                <a href=""><i class="bi bi-trash3-fill"></i></a>
-            </td>
-        </tr>
-        <tr>
-            <th scope="row" style="padding-top: 25px; padding-left: 20px; border-color: black;">
-                <div style="width: 18px; height: 18px; background-color: yellow; border-radius: 4px; display: inline-block;"></div>
-            </th>
-            <td class="text-center"><img src="https://www.newark.com/productimages/promo/en_US/56AJ9853-40.jpg" alt="Modulo LED" style="height: 50px;"></td>
-            <td class="text-center" style="padding-top: 20px;">3</td>
-            <td style="padding-top: 20px;">Módulo LED BXRC-30E10K0-B-73-SE</td>
-            <td class="text-center" style="padding-top: 20px;">BridgeLux</td>
-            <td class="text-center" style="padding-top: 20px;">380</td>
-            <td class="text-center" style="padding-top: 20px;">
-                <a href=""><i class="bi bi-pencil-fill" style="padding-right: 15px;"></i></a>
-                <a href=""><i class="bi bi-trash3-fill"></i></a>
-            </td>
-        </tr>
-        <tr>
-            <th scope="row" style="background-color: #C0B9B9; padding-top: 25px; padding-left: 20px;">
-                <div style="width: 18px; height: 18px; background-color: green; border-radius: 4px; display: inline-block;"></div>
-            </th>
-            <td class="text-center" style="background-color: #C0B9B9;"><img src="https://www.newark.com/productimages/promo/en_US/56AJ9853-40.jpg" alt="Modulo LED" style="height: 50px;"></td>
-            <td class="text-center" style="background-color: #C0B9B9; padding-top: 20px;">2</td>
-            <td style="background-color: #C0B9B9; padding-top: 20px;">Módulo LED DOB sin conductor para bombillas</td>
-            <td class="text-center" style="background-color: #C0B9B9; padding-top: 20px;">Alibaba</td>
-            <td class="text-center" style="background-color: #C0B9B9; padding-top: 20px;">500</td>
-            <td class="text-center" style="background-color: #C0B9B9; padding-top: 20px;">
-                <a href=""><i class="bi bi-pencil-fill" style="padding-right: 15px;"></i></a>
-                <a href=""><i class="bi bi-trash3-fill"></i></a>
-            </td>
-        </tr>
-    </tbody>
-</table>
-<div class="mt-3">
-    <div style="display: flex; justify-content: center; align-items: center; gap: 30px;">
-        <strong class="d-block text-center mb-2">Estados de Stock:</strong>
-        <div style="display: flex; align-items: center; gap: 5px;">
+      {% endif %}
+      <div class="mt-3">
+        <div style="display: flex; justify-content: center; align-items: center; gap: 30px;">
+          <strong class="d-block text-center mb-2">Estados de Stock:</strong>
+          <div style="display: flex; align-items: center; gap: 5px;">
             <div style="width: 18px; height: 18px; background-color: green; border-radius: 4px;"></div>
             <span style="color: #222;">De 30.000 en adelante </span>
-        </div>
-        <div style="display: flex; align-items: center; gap: 5px;">
+          </div>
+          <div style="display: flex; align-items: center; gap: 5px;">
             <div style="width: 18px; height: 18px; background-color: yellow; border-radius: 4px;"></div>
             <span style="color: #222;">Entre 15.000 hasta 30.000 </span>
-        </div>
-        <div style="display: flex; align-items: center; gap: 5px;">
+          </div>
+          <div style="display: flex; align-items: center; gap: 5px;">
             <div style="width: 18px; height: 18px; background-color: red; border-radius: 4px; border: 1px solid #ccc;"></div>
             <span style="color: #222;">De 15.000 para abajo </span>
+          </div>
         </div>
+      </div>
     </div>
+    <div class="col-lg-4 col-md-5 col-12">
+      <div class="bg-primary border-start border-5 border-white" style="margin-left: 0px; padding: 20px; border-radius: 25px;">
+        <table class="table table-borderless text-white">
+          <thead>
+            <tr>
+              <th colspan="3" class="bg-primary text-white text-center" style="padding-left: 90px;"> <h4>Órdenes de Producción</h4></th>
+            </tr>
+          </thead>
+          <tbody class="bg-white text-dark">
+            <tr>
+              <th colspan="2" class="text-white" style="background-color: #014BAC;">ID</th>
+              <th colspan="2" class="text-white" style="background-color: #014BAC;">Descripción</th>
+              <th colspan="2" class="text-white" style="background-color: #014BAC;">Cantidad</th>
+            </tr>
+            <tr>
+              <td colspan="2" class="text-white text-center" style="background-color: #61B5FA;">1</td>
+              <td colspan="2" class="text-white" style="background-color: #61B5FA;">Módulo LED D08 sin conductor para bombillas</td>
+              <td colspan="2" class="text-white text-center" style="background-color: #61B5FA;"><span>300</span></td>
+            </tr>
+            <tr>
+              <td colspan="2" class="text-white text-center" style="background-color: #3E83E8;">2</td>
+              <td colspan="2" class="text-white" style="background-color: #3E83E8;">Porta LED 50-2204CT</td>
+              <td colspan="2" class="text-white text-center" style="background-color: #3E83E8;"><span>150</span></td>
+            </tr>
+            <tr>
+              <td colspan="2" class="text-white text-center" style="background-color: #61B5FA;">3</td>
+              <td colspan="2" class="text-white" style="background-color: #61B5FA;">Porta LED 50-200NCR</td>
+              <td colspan="2" class="text-white text-center" style="background-color: #61B5FA;"><span>200</span></td>
+            </tr>
+            <tr>
+              <td colspan="3" class="bg-primary text-center pt-3" style="padding-left: 90px;">
+                <a class="btn border-white text-primary text-white" style="background-color: #014BAC; width: 180px; height: 40px; border-radius: 15px;" href="{% url 'App_LUMINOVA:depo_seleccion' %}">Seleccionar</a>
+              </td>
+            </tr>
+          </tbody>
+          <thead>
+            <tr style="border-bottom: 3px solid white;">
+              <td colspan="3" class="bg-primary text-center pt-3"></td>
+            </tr>
+            <tr>
+              <th colspan="3" class="bg-primary text-white text-center" style="padding-left: 90px;"> <h4>Productos Terminados</h4></th>
+            </tr>
+          </thead>
+          <tbody class="bg-white text-dark">
+            <tr>
+              <th colspan="2" class="text-white" style="background-color: #014BAC;" >ID</th>
+              <th colspan="2" class="text-white" style="background-color: #014BAC;">Descripción</th>
+              <th colspan="2" class="text-white" style="background-color: #014BAC;">Cantidad</th>
+            </tr>
+            <tr>
+              <td colspan="2" class="text-white text-center" style="background-color: #61B5FA;">1</td>
+              <td colspan="2" class="text-white" style="background-color: #61B5FA;">Lámpara de Pie</td>
+              <td colspan="2" class="text-white text-center" style="background-color: #61B5FA;"><span>50</span></td>
+            </tr>
+            <tr>
+              <td colspan="2" class="text-white text-center" style="background-color: #3E83E8;">2</td>
+              <td colspan="2" class="text-white" style="background-color: #3E83E8;">Lámpara Colgante</td>
+              <td colspan="2" class="text-white text-center" style="background-color: #3E83E8;"><span>70</span></td>
+            </tr>
+          </tbody>
+          <thead>
+            <tr style="border-bottom: 3px solid white;">
+              <td colspan="3" class="bg-primary text-center pt-3"></td>
+            </tr>
+            <tr>
+              <th colspan="3" class="bg-primary text-white text-center" style="padding-left: 90px;"><h4>Stock en Falta</h4></th>
+            </tr>
+          </thead>
+          <tbody class="bg-white text-dark">
+            <tr>
+              <th colspan="2" class="text-white" style="background-color: #014BAC;">ID</th>
+              <th colspan="2" class="text-white" style="background-color: #014BAC;">Descripción</th>
+              <th colspan="2" class="text-white" style="background-color: #014BAC;">Cantidad</th>
+            </tr>
+            <tr>
+              <td colspan="8" class="text-white text-center" style="background-color: #A19898;">No hay productos en falta actualmente.</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 </div>
-
-
-
 {% endblock %}
