--- a/App_LUMINOVA/templates/deposito.html
+++ b/App_LUMINOVA/templates/deposito.html
@@ -8,7 +8,7 @@
     <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-primary sidebar collapse border-end full-height" style="border-top-left-radius: 25px; border-top-right-radius: 25px;">
         <div class="position-sticky pt-4">
             <h6 class="sidebar-heading d-flex justify-content-center align-items-center px-3 mt-4 mb-1 text-white fw-bold">
-                <span>Depósito</span>
+                <a href="{% url 'App_LUMINOVA:deposito' %}"><span style="color: white;">Depósito</span></a>
             </h6>
             <hr class="text-white">
             <ul class="nav flex-column">
@@ -46,7 +46,7 @@
                     {% if categoria.tipo == "Insumo" %}
                         <div class="col">
                             <div class="card shadow-sm">
-                                <a href="{% url 'App_LUMINOVA:categoria_detalle' %}" class="text-decoration-none text-dark">
+                                <a href="{% url 'App_LUMINOVA:categoria_detail' categoria.id %}" class="text-decoration-none text-dark">
                                     <img src="{{categoria.imagen.url}}" class="card-img-top object-fit-contain" alt="Modulo LED" style="height: 150px;">
                                     <div class="card-body">
                                         <h5 class="card-title">{{categoria.nombre}}</h5>
