--- a/App_LUMINOVA/templates/productoterminado_crear.html
+++ b/App_LUMINOVA/templates/productoterminado_crear.html
@@ -26,7 +26,7 @@
 
 {% block content %}
 
-    <form action="{% url 'App_LUMINOVA:insumo_create' %}" method="post"> {% csrf_token %}
+    <form action="{% url 'App_LUMINOVA:insumo_create' %}" method="post" enctype="multipart/form-data"> {% csrf_token %}
         {{form.as_p}}
         <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
