--- a/App_LUMINOVA/templates/categoria_detail.html
+++ b/App_LUMINOVA/templates/categoria_detail.html
@@ -29,7 +29,12 @@
 <div class="container-fluid">
   <div class="row" style="align-items: flex-start;">
     <div class="col-lg-8 col-md-7 col-12">
-      {% if categoria.nombre == categoria.nombre %}
+
+<!--       {% if categoria_I.nombre == categoria_I  %}
+
+      {% endif %} -->
+
+      {% if categoria_I.nombre == categoria_I.nombre %}
         <table class="table bg-primary" style="border: black;">
           <thead>
             <th class="text-white text-center" style="background-color: #014BAC;" colspan="7">
@@ -47,7 +52,8 @@
               <th scope="col" class="text-center" style="background-color: #808080;">Acciones</th>
             </tr>
           </thead>
-          {% for insumo in categoria.insumos.all %}
+      {% endif %}
+          {% for insumo in categoria_I.all %}
             <tbody>
               <tr>
                 <th scope="row" style="padding-top: 25px; padding-left: 20px;">
@@ -66,7 +72,7 @@
             </tbody>
           {% endfor %}
         </table>
-      {% endif %}
+
       <div class="mt-3">
         <div style="display: flex; justify-content: center; align-items: center; gap: 30px;">
           <strong class="d-block text-center mb-2">Estados de Stock:</strong>
