--- a/App_LUMINOVA/templates/deposito.html
+++ b/App_LUMINOVA/templates/deposito.html
@@ -41,12 +41,12 @@
 
         <div class="col-md-8 bg-primary" style="padding-top: 20px; padding-bottom: 20px;">
             <div id="insumos-content" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
-                {% for categoria in categorias %}
+                {% for categoria in categorias_I %}
 
-                    {% if categoria.tipo == "Insumo" %}
+                    {% if categoria %}
                         <div class="col">
                             <div class="card shadow-sm">
-                                <a href="{% url 'App_LUMINOVA:categoria_detail' categoria.id %}" class="text-decoration-none text-dark">
+                                <a href="{% url 'App_LUMINOVA:categoria_i_detail' categoria.id %}" class="text-decoration-none text-dark">
                                     <img src="{{categoria.imagen.url}}" class="card-img-top object-fit-contain" alt="Modulo LED" style="height: 150px;">
                                     <div class="card-body">
                                         <h5 class="card-title">{{categoria.nombre}}</h5>
@@ -62,12 +62,12 @@
 
 
             <div id="productos-content" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4" style="display: none;">
-                {% for categoria in categorias %}
+                {% for categoria in categorias_PT %}
 
-                    {% if categoria.tipo == "Producto Terminado" %}
+                    {% if categoria %}
                         <div class="col">
                             <div class="card shadow-sm">
-                                <a href="#" class="text-decoration-none text-dark">
+                                <a href="{% url 'App_LUMINOVA:categoria_pt_detail' categoria.id %}" class="text-decoration-none text-dark">
                                     <img src="{{categoria.imagen.url}}" class="card-img-top object-fit-contain" alt="Producto Terminado" style="height: 150px;">
                                     <div class="card-body">
                                         <h5 class="card-title">{{categoria.nombre}}</h5>
