--- a/App_LUMINOVA/templates/padre.html
+++ b/App_LUMINOVA/templates/padre.html
@@ -15,20 +15,21 @@
 </head>
 <body class="bg-light">
 
-    {% include 'header.html' %}
+    {% include 'shared/header.html' %}
 
     <div class="container-fluid">
         <div class="row">
             {% block sidebar_content %}
-                {% include 'sidebar.html' %}
+                {% include 'shared/sidebar.html' %}
             {% endblock %}
-            <main class="col-md-9 ms-sm-auto col-lg-10">
+            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 py-4"> 
+                {% bootstrap_messages %} <!-- Para mostrar mensajes de Django (success, error, etc.) -->
                 {% block content %}{% endblock %}
             </main>
         </div>
     </div>
 
-    {% include 'footer.html' %}
+    {% include 'shared/footer.html' %}
     {% bootstrap_javascript %}
 </body>
 </html>
