--- a/App_LUMINOVA/templates/produccion/ordenes.html
+++ b/App_LUMINOVA/templates/produccion/ordenes.html
@@ -10,7 +10,7 @@
             <hr class="text-white">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link  {% if '/ordenes/' in request.path %}active{% endif %}  text-white fw-bold custom-active-button d-flex align-items-center" aria-current="page" href="{% url 'App_LUMINOVA:ordenes' %}" style="border-radius: 25px;">
+                    <a class="nav-link  {% if '/ordenes/' in request.path %}active{% endif %}  text-white fw-bold custom-active-button d-flex align-items-center" aria-current="page" href="{% url 'App_LUMINOVA:produccion_lista_op' %}" style="border-radius: 25px;">
                         <i class="bi bi-clipboard"></i> <span class="ms-2">Ordenes</span>
                     </a>
                 </li>
