--- a/App_LUMINOVA/templates/shared/header.html
+++ b/App_LUMINOVA/templates/shared/header.html
@@ -15,11 +15,11 @@
 
             <div class="collapse navbar-collapse" id="navbarContent">
                 <ul class="navbar-nav mb-2 mb-lg-0 d-flex justify-content-around w-100">
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="{% url 'App_LUMINOVA:compras' %} ">Compras</a></li>
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="{% url 'App_LUMINOVA:produccion' %}">Producción</a></li>
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="{% url 'App_LUMINOVA:ventas' %}">Ventas</a></li>
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="{% url 'App_LUMINOVA:deposito' %}">Depósito</a></li>
-                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="{% url 'App_LUMINOVA:control_calidad' %}">Control de Calidad</a></li>
+                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="{% url 'App_LUMINOVA:compras_lista_oc' %} ">Compras</a></li>
+                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="{% url 'App_LUMINOVA:produccion_principal' %}">Producción</a></li>
+                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="{% url 'App_LUMINOVA:ventas_lista_ov' %}">Ventas</a></li>
+                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="{% url 'App_LUMINOVA:deposito_view' %}">Depósito</a></li>
+                    <li class="nav-item"><a class="nav-link text-primary fw-bold" href="#">Control de Calidad</a></li>
                 </ul>
 
                 <div class="navbar-nav ms-auto align-items-center me-3 mb-2 mb-lg-0 d-flex flex-row">
