--- a/App_LUMINOVA/templates/compras/compras_desglose.html
+++ b/App_LUMINOVA/templates/compras/compras_desglose.html
@@ -11,17 +11,17 @@
             <hr class="text-white">
             <ul class="nav flex-column">
                 <li class="nav-item">
-                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:compras' %}">
+                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:compras_lista_oc' %}">
                         <i class="bi bi-list-ul me-2"></i> <span class="ms-2">Listado de OC</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
-                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:desglose' %}">
+                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:compras_desglose' %}">
                         <i class="bi bi-box-seam-fill"></i> <span class="ms-2">Desglose de Componentes</span>
                     </a>
                 </li>
                 <li class="nav-item mt-2">
-                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:seguimiento' %}">
+                    <a class="nav-link text-white fw-bold custom-active-button d-flex align-items-center" href="{% url 'App_LUMINOVA:compras_seguimiento' %}">
                         <i class="bi bi-truck me-2"></i> <span class="ms-2">Seguimiento de Compras</span>
                     </a>
                 </li>
@@ -49,7 +49,7 @@
   </thead>
   <tbody>
     <tr>
-      <td class="text-center align-middle"><a href="{% url 'App_LUMINOVA:desglose2' %}">OCOOO5</a></td>
+      <td class="text-center align-middle"><a href="#">OCOOO5</a></td>
       <td class="text-center align-middle">• Pendiente a comprar</td>
       <td class="text-center align-middle">Modulos led</td>
       <td class="text-center align-middle">22/07/2025</td>
