--- a/App_LUMINOVA/templates/deposito/depo_seleccion.html
+++ b/App_LUMINOVA/templates/deposito/depo_seleccion.html
@@ -38,10 +38,10 @@
     <div class="row mx-auto border-start">
         <ul class="nav justify-content-start flex-wrap" style="background-color: white;">
             <li class="nav-item">
-                <a id="insumos-tab" href="{% url 'App_LUMINOVA:deposito' %}" class="nav-link active bg-primary text-white text-center" style="width: 170px; border-top-left-radius: 20px; border-top-right-radius: 20px; font-weight: bold;" aria-current="page">Insumos</a>
+                <a id="insumos-tab" href="{% url 'App_LUMINOVA:deposito_view' %}" class="nav-link active bg-primary text-white text-center" style="width: 170px; border-top-left-radius: 20px; border-top-right-radius: 20px; font-weight: bold;" aria-current="page">Insumos</a>
             </li>
             <li class="nav-item">
-                <a id="productos-tab" href="{% url 'App_LUMINOVA:deposito' %}" class="nav-link bg-primary text-white text-center" style="width: 170px; border-top-left-radius: 20px; border-top-right-radius: 20px; font-weight: bold;">Prod. Terminados</a>
+                <a id="productos-tab" href="{% url 'App_LUMINOVA:deposito_view' %}" class="nav-link bg-primary text-white text-center" style="width: 170px; border-top-left-radius: 20px; border-top-right-radius: 20px; font-weight: bold;">Prod. Terminados</a>
             </li>
         </ul>
 
