--- a/App_LUMINOVA/templates/deposito/insumo_editar.html
+++ b/App_LUMINOVA/templates/deposito/insumo_editar.html
@@ -97,7 +97,7 @@
 
             <div class="mt-3">
                 <button type="submit" class="btn btn-primary">Guardar Insumo</button>
-                <a href="{% url 'App_LUMINOVA:deposito' %}" class="btn btn-secondary">Cancelar</a>
+                <a href="{% url 'App_LUMINOVA:deposito_view' %}" class="btn btn-secondary">Cancelar</a>
             </div>
         </form>
     </div>
