--- a/App_LUMINOVA/templates/deposito/productoterminado_confirm_delete.html
+++ b/App_LUMINOVA/templates/deposito/productoterminado_confirm_delete.html
@@ -36,9 +36,9 @@
 
 {% block content %}
 
-    <form action="{% url 'App_LUMINOVA:insumo_delete' insumo.id %}" method="post"> {% csrf_token %}
-        <p>Esta seguro que desea eliminar el insumo?</p>
+    <form action="{% url 'App_LUMINOVA:producto_terminado_delete' producto_terminado.id %}" method="post"> {% csrf_token %}
+        <p>Esta seguro que desea eliminar el producto terminado?</p>
         <button type="submit" class="btn btn-primary">Confirmar</button>
-        <button class="btn btn-primary"><a href="{% url 'App_LUMINOVA:deposito' %}">Cancelar</a></button>
+        <a href="{% url 'App_LUMINOVA:deposito_view' %}" class="btn btn-secondary">Cancelar</a>
     </form>
 {% endblock %}
