--- a/App_LUMINOVA/templates/deposito/productoterminado_editar.html
+++ b/App_LUMINOVA/templates/deposito/productoterminado_editar.html
@@ -120,7 +120,7 @@
 
             <div class="mt-3">
                 <button type="submit" class="btn btn-primary">Guardar Producto Terminado</button>
-                <a href="{% url 'App_LUMINOVA:deposito' %}" class="btn btn-secondary">Cancelar</a>
+                <a href="{% url 'App_LUMINOVA:deposito_view' %}" class="btn btn-secondary">Cancelar</a>
             </div>
         </form>
     </div>
