--- a/App_LUMINOVA/templates/padre.html
+++ b/App_LUMINOVA/templates/padre.html
@@ -7,29 +7,32 @@
     <title>{% block title %}Luminova{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% bootstrap_css %}
-    <!-- CSS Customizado -->
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="{% static 'img/favicon.ico' %}">
+    {% block head_extra %}{% endblock %} {# Para CSS o JS específico de una página #}
 </head>
-<body class="bg-light">
+<body class="d-flex flex-column min-vh-100 bg-light"> {# Asegura que el footer baje #}
 
     {% include 'shared/header.html' %}
 
-    <div class="container-fluid">
+    <div class="container-fluid flex-grow-1"> {# Para que el contenido principal ocupe espacio #}
         <div class="row">
             {% block sidebar_content %}
-                {% include 'shared/sidebar.html' %}
+                {# Lógica para incluir el sidebar correcto basado en request.path o un context_processor #}
+                {% include 'shared/sidebar_logic.html' %} {# Crear este archivo o poner la lógica aquí #}
             {% endblock %}
-            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-                {% bootstrap_messages %} <!-- Para mostrar mensajes de Django (success, error, etc.) -->
+            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 py-4"> {# Añadido py-4 para padding vertical #}
+                {% bootstrap_messages %} 
                 {% block content %}{% endblock %}
             </main>
         </div>
     </div>
 
     {% include 'shared/footer.html' %}
+    
     {% bootstrap_javascript %}
+    <script src="{% static 'js/app_global.js' %}"></script> {# Un JS global si lo necesitas #}
+    {% block scripts_extra %}{% endblock %} {# Para JS específico de una página #}
 </body>
 </html>
